--- a/lab-kyle/package.json
+++ b/lab-kyle/package.json
@@ -4,7 +4,7 @@
   "description": "Lab-14",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/krichey15/lab-14-relationship-modeling#readme",
   "devDependencies": {
-    "mocha": "^4.1.0",
+    "jest": "^22.0.4",
     "nodemon": "^1.14.8",
     "superagent": "^3.8.2"
   },
@@ -27,6 +27,7 @@
     "dotenv": "^4.0.0",
     "expect": "^22.0.3",
     "express": "^4.16.2",
-    "mongoose": "^5.0.0-rc2"
+    "mongoose": "^5.0.0-rc2",
+    "morgan": "^1.9.0"
   }
 }
